--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
   <!-- Angular -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
 	<script src="https://code.angularjs.org/1.6.1/angular-route.min.js"></script>
@@ -12,6 +20,7 @@
   <script src="core.js"></script>
   <!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <!-- Fontawesome -->
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
@@ -21,7 +30,7 @@
   	  <div class="container-fluid">
   	    <!-- Brand and toggle get grouped for better mobile display -->
   	    <div class="navbar-header">
-  	      <button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
+  	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
   	        <span class="sr-only">Toggle navigation</span>
   	        <span class="icon-bar"></span>
   	        <span class="icon-bar"></span>
@@ -31,7 +40,7 @@
   	    </div>
 
   	    <!-- Collect the nav links, forms, and other content for toggling -->
-  	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  	    <div class="collapse navbar-collapse" id="navbar-collapse-1">
   	      <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Search <span class="caret"></span></a>
@@ -53,5 +62,9 @@
   <section>
     <div ng-view></div>
   </section>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
