--- a/public/pages/main.html
+++ b/public/pages/main.html
@@ -1,16 +1,36 @@
-<div class="container">
+<div class="container" ng-controller="mainController as main">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h1>Login</h1>
-      <form class="form">
+      <form class="form" ng-submit="main.log(credentials)">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Username">
+          <input type="text" class="form-control" placeholder="Username" ng-model="credentials.username">
         </div>
         <div class="form-group">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password" ng-model="credentials.password">
         </div>
         <button class="btn btn-success">Login</button>
-      </form>
+      </form><br>
+      <div class="alert alert-danger" ng-show="main.logAlert">{{ main.logAlert }}</div>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h1>Signup</h1>
+      <form class="form" ng-submit="main.register(main.reg)">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Username" ng-model="main.reg.username">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" placeholder="Password" ng-model="main.reg.password">
+        </div>
+        <div class="form-group">
+          <input type="email" class="form-control" placeholder="Email" ng-model="main.reg.email">
+        </div>
+        <button class="btn btn-success">Sign up</button>
+      </form><br>
+      <div class="alert alert-danger" ng-show="main.regAlert">{{ main.regAlert }}</div>
     </div>
   </div>
 </div>
